--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "system": {
-    "name": "Nhà của Cún Kute",
+    "name": "My home",
     "language": "vn-VI",
     "debug": false,
     "tempUnit": "°C",
